# voice_assistant

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: gen_phrases.py  install_autorun.bat  remove_autorun.bat
src/: audio.py  browser.py  commands.py  config.py  intent.py  stt.py  tts.py  weather.py  youtube.py
src/voice_assistant/: __main__.py  assistant.py  cli.py  config.py
src/voice_assistant/assets/sounds/phrases/: manifest.json
src/voice_assistant/audio/: sounds.py
src/voice_assistant/nlu/: handlers.py  intent.py  wake_word.py
src/voice_assistant/services/: browser.py  commands.py  weather.py  windows_title.py  youtube.py  youtube_flow.py
src/voice_assistant/speech/: audio.py  mixer.py  model_loader.py  stt.py  text_normalize.py  tts.py
src/voice_assistant/speech/providers/: base.py  google_tts.py  piper_tts.py  vosk_tts.py
src/voice_assistant/speech/providers/stt/: __init__.py  base.py  google_stt.py  vosk_stt.py
tests/: conftest.py  test_audio.py  test_browser.py  test_cli.py  test_commands.py  test_commands_extra.py  test_config.py  test_handlers.py  test_intent.py  test_model_loader.py  test_piper.py  test_sounds.py  test_stt.py  test_text_normalize.py  test_timer.py  test_tts.py  test_tts_play.py  test_vosk_tts.py  test_wake_word.py  test_weather.py  test_workflow.py  test_youtube.py  test_youtube_flow.py  test_youtube_flow_extra.py
