[project]
name = "voice-assistant"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "SpeechRecognition>=3.16.0",
    "gTTS>=2.5.0",
    "pygame>=2.6.0",
    "sounddevice>=0.5.0",
    "yt-dlp>=2026.0.0",
    "thefuzz>=0.22.0",
    "loguru>=0.7.0",
    "requests>=2.34.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
build = [
    "pyinstaller",
]





[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


