[project]
name = "voice-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "SpeechRecognition>=3.16.0",
    "gTTS>=2.5.0",
    "pygame>=2.6.0",
    "sounddevice>=0.5.0",
    "yt-dlp>=2026.0.0",
    "thefuzz>=0.22.0",
    "loguru>=0.7.0",
    "requests>=2.34.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.0.0",
    "num2words>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pyinstaller>=6.0",
    "xenon>=0.9",
    "pre-commit>=3.7",
]

[project.scripts]
voice-assistant = "voice_assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_assistant"]

[tool.hatch.build.targets.wheel.force-include]
"src/voice_assistant/py.typed" = "voice_assistant/py.typed"