[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "Voice assistant for visually impaired — YouTube, weather, timer, sounds"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "slaid098" }]
keywords = ["voice-assistant", "accessibility", "tts", "stt", "youtube"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "SpeechRecognition>=3.16.0",
    "gTTS>=2.5.0",
    "piper-tts>=1.4.0",
    "pygame>=2.6.0",
    "sounddevice>=0.5.0",
    "yt-dlp>=2026.0.0",
    "thefuzz>=0.22.0",
    "loguru>=0.7.0",
    "requests>=2.34.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.0.0",
    "num2words>=0.5.0",
    "cyrtranslit>=1.2.0",
    "vosk>=0.3.45",
    "pywin32>=308 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pyinstaller>=6.0",
    "xenon>=0.9",
    "pre-commit>=3.7",
]

[project.scripts]
voice-assistant = "voice_assistant.cli:main"

[project.urls]
Homepage = "https://github.com/slaid098/voice_assistant"
Repository = "https://github.com/slaid098/voice_assistant"
Issues = "https://github.com/slaid098/voice_assistant/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_assistant"]

[tool.hatch.build.targets.wheel.force-include]
"src/voice_assistant/py.typed" = "voice_assistant/py.typed"

# ── Ruff ──────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # bugbear
    "UP",        # pyupgrade
    "SIM",       # simplify
    "C90",       # mccabe complexity
    "PL",        # pylint
    "RUF",       # ruff-specific
    "S",         # bandit (security)
    "TRY",       # tryceratops (exception handling)
    "LOG",       # flake8-logging
]
ignore = [
    "S101",      # assert in tests
    "S311",      # pseudo-random for non-crypto use
    "RUF001",    # ambiguous Cyrillic chars (we write in Russian)
    "RUF002",    # same for docstrings
    "RUF003",    # same for comments
    "TRY003",    # long messages outside exception class
    "PLR2004",   # magic values in tests
    "S106",      # hardcoded passwords in tests
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 5
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "S106", "PLC0415"]
"src/voice_assistant/audio/sounds.py" = ["PLC0415"]

# ── mypy ──────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "speech_recognition.*",
    "sounddevice.*",
    "gtts.*",
    "pygame.*",
    "pydub.*",
    "yt_dlp.*",
    "num2words.*",
    "cyrtranslit.*",
    "thefuzz.*",
    "win32gui.*",
    "win32con.*",
    "vosk.*",
]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
addopts = "--cov=voice_assistant --cov-report=term-missing --cov-fail-under=75"
testpaths = ["tests"]

# ── coverage ──────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/voice_assistant"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]